# OOD2

./: CMakeLists.txt
program1/: main.cpp
program2/: main.cpp
src/: FileHandler.cpp  FileHandler.hpp
